--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_TYPE=mysql
-DB_HOST=localhost
+DB_HOST=database-1.czi42q6csxtd.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=adminNotFound9
+DB_PASSWORD=adminNotFound9
 DB_DATABASE=meal
 
 
