--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_TYPE=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=mohamed12122002
 DB_DATABASE=meal
 
 
-S3_PREFIX=""
+S3_PREFIX=https://meal-bucket-projet.s3.us-east-1.amazonaws.com
