--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_TYPE=mysql
-DB_HOST=localhost
+DB_HOST=meal-database.csjmsuavh4ze.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_USERNAME=admin
-DB_PASSWORD=mohamed12122002
+DB_PASSWORD=Mohamed.2024
 DB_DATABASE=meal
 
 
